import classes / assets create better AssetManager