@@ -1,21 +1,26 @@
 package com.avaricious.components;
 
+import com.avaricious.AssetKey;
+import com.avaricious.Assets;
+import com.avaricious.components.bars.StatUpgradeBar;
+import com.avaricious.components.bars.UpgradeBar;
 import com.avaricious.stats.statupgrades.StatUpgrade;
-import com.avaricious.upgrades.bars.StatUpgradeBar;
-import com.avaricious.upgrades.bars.UpgradeBar;
-import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 import com.badlogic.gdx.graphics.g2d.TextureRegion;
 import com.badlogic.gdx.math.Rectangle;
 import com.badlogic.gdx.math.Vector2;
 
+import java.util.Arrays;
 import java.util.List;
 
-public class StatUpgradeWindow {
+public class StatusUpgradeWindow {
 
-    private final Texture window = Assets.I().getStatUpgradeWindow();
-    private final Texture shadow = Assets.I().getStatUpgradeWindowShadow();
-    private final TextureRegion levelUpTxt = new TextureRegion(Assets.I().getLevelUpTxt());
+    private final float WINDOW_X = 1f;
+    private final float WINDOW_Y = 6f;
+
+    private final TextureRegion window = Assets.I().get(AssetKey.STATUS_UPGRADE_WINDOW);
+    private final TextureRegion shadow = Assets.I().get(AssetKey.STATUS_UPGRADE_WINDOW_SHADOW);
+    private final TextureRegion levelUpTxt = new TextureRegion(Assets.I().get(AssetKey.LEVEL_UP_TEXT));
     private boolean show = false;
 
     private static final float PULSE_SPEED = 3.5f;
@@ -24,9 +29,9 @@ public class StatUpgradeWindow {
     private float levelUpTxtScale = 1;
 
     private final UpgradeBar upgradeBar = new StatUpgradeBar(randomStatUpgrades(),
-        new Rectangle(5.6f, 2.6f, 1.25f, 1.25f));
+        new Rectangle(WINDOW_X + 1.5f, WINDOW_Y + 1.6f, 1.25f, 1.25f));
 
-    public StatUpgradeWindow(Runnable onExit) {
+    public StatusUpgradeWindow(Runnable onExit) {
         upgradeBar.setOnUpgradeClickedAndAnimationEnded(() -> {
             show = false;
             onExit.run();
@@ -34,7 +39,7 @@ public class StatUpgradeWindow {
     }
 
     private List<StatUpgrade> randomStatUpgrades() {
-        return List.of(StatUpgrade.newRandom(), StatUpgrade.newRandom(), StatUpgrade.newRandom());
+        return Arrays.asList(StatUpgrade.newRandom(), StatUpgrade.newRandom(), StatUpgrade.newRandom());
     }
 
     public void draw(SpriteBatch batch, float delta) {
@@ -43,20 +48,18 @@ public class StatUpgradeWindow {
         levelUpAnimTime += delta;
         levelUpTxtScale = 1f + (float) Math.sin(levelUpAnimTime * PULSE_SPEED) * PULSE_AMPLITUDE;
 
-        batch.setColor(1f, 1f, 1f, 0.25f);
-        batch.draw(shadow, 4.1f, 0.85f, 225f / 30f, 163f / 30f);
-        batch.setColor(1f, 1f, 1f, 1f);
-        batch.draw(window, 4.1f, 1f, 225f / 30f, 163f / 30f);
+//        batch.setColor(1f, 1f, 1f, 0.25f);
+//        batch.draw(shadow, 4.1f, 0.85f, 225f / 30f, 163f / 30f);
+//        batch.setColor(1f, 1f, 1f, 1f);
+        batch.draw(window, WINDOW_X, WINDOW_Y, 225f / 30f, 163f / 30f);
         upgradeBar.draw(batch);
 
-        float x = 5.9f;
-        float y = 4.6f;
         float w = 55f / 15f;
         float h = 13f / 15f;
 
         batch.draw(
             levelUpTxt,
-            x, y,
+            WINDOW_X + 1.8f, WINDOW_Y + 3.6f,
             w / 2f, h / 2f,
             w, h,
             levelUpTxtScale, levelUpTxtScale,
